<resources>
    <string name="app_name">MishnaPals</string>
    <string name="caseId">Enter Case Id</string>
    <string name="search">Search</string>
    <string name="currentMishnayosButton">My Mishnayos</string>
    <string name="currentMishnayosButtonHorizontal">My \n Mishnayos</string>
    <string name="viewAllAvail">View All Available Mishnayos</string>
    <string name="viewAllAvailHorizontal">View All \n Available Mishnayos</string>
    <string name="new_case">New Case</string>
    <string name="new_case_horizontal">New \nCase</string>


    <string name="newCaseId">Case ID</string>
    <string name="newNiftarName">Name of Niftar</string>
    <string name="confirmCaseID">Re-enter ID</string>
    <string name="hebNameNiftar">שם הנפטר</string>

    <string name="makePrivate">Make Private</string>
    <string name="dateNiftarLabel">Date Niftar</string>
    <string name="createCase">Create Case</string>
    <string name="taken">Taken</string>
    <string name="confirmMasechtaButton">Sign Me Up!</string>
    <string name="reserveMasechta">Reserve</string>
    <string name="moreOptionsInNewCase"><i><u>More Options</u></i></string>
    <string name="takeMishnayos">View Mishnayos List</string>


    <string name="label_google_sign_in">Firebase + Google Sign In</string>
    <string name="desc_google_sign_in">Use a Google Sign In credential to authenticate with Firebase.</string>

    <string name="label_facebook_login">Firebase + Facebook Login</string>
    <string name="desc_facebook_login">Use a Facebook Login credential to authenticate with Firebase.</string>

    <string name="label_twitter_login">Firebase + Twitter Login</string>
    <string name="desc_twitter_login">Use a Twitter Login credential to authenticate with Firebase.</string>

    <string name="label_emailpassword">Email/Password Authentication</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>

    <string name="label_phone_auth">Phone Number Authentication</string>
    <string name="desc_phone_auth">Use a phone number to authenticate with Firebase.</string>

    <string name="label_anonymous_auth">Anonymous Authentication</string>
    <string name="desc_anonymous_auth">Sign in anonymously and then later upgrade to a full Firebase Auth user.</string>

    <string name="label_custom_auth">Custom Authentication</string>
    <string name="desc_custom_auth">Use a custom token signed by your own server to authenticate with Firebase.</string>

    <string name="label_firebase_ui">FirebaseUI Auth</string>
    <string name="desc_firebase_ui">Use the FirebaseUI-Android library to authenticate with Firebase.</string>

    <string name="hint_user_id">User ID</string>
    <string name="get_custom_token">Get Token</string>
    <string name="sign_in">Sign In</string>
    <string name="create_account">Create Account</string>
    <string name="sign_out">Sign Out</string>
    <string name="verify_email">Verify Email</string>
    <string name="disconnect">Disconnect</string>
    <string name="loading">Loading…</string>
    <string name="custom_token">Custom Token</string>
    <string name="signed_in">Signed In</string>
    <string name="signed_out">Signed Out</string>
    <string name="token_null">Token: null</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="auth_failed">Authentication failed</string>
    <string name="start_phone_auth">Start</string>
    <string name="verify_phone_auth">Verify</string>
    <string name="resend_phone_auth">Resend</string>
    <string name="hint_phone_number">Phone Number</string>
    <string name="hint_verification_code">Verification Code</string>
    <string name="status_code_sent">Code Sent</string>
    <string name="status_verification_failed">Verification failed</string>
    <string name="status_verification_succeeded">Verification succeeded</string>
    <string name="status_sign_in_failed">Sign-in failed</string>
    <string name="instant_validation">(instant validation)</string>

    <string name="firebase_status_fmt">Firebase User: %s</string>
    <string name="firebase_user_management">Firebase User Management</string>

    <string name="google_status_fmt">Google User: %s</string>
    <string name="google_title_text">Google Sign In</string>

    <string name="facebook_status_fmt">Facebook User: %s</string>
    <string name="facebook_title_text">Facebook Login</string>

    <string name="emailpassword_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="emailpassword_title_text">Email and Password</string>

    <string name="phone_title_text">Phone Number</string>

    <string name="twitter_status_fmt">Twitter User: %s</string>
    <string name="twitter_title_text">Twitter Login</string>

    <string name="firebaseui_status_fmt">Firebase User: %s</string>
    <string name="firebaseui_title_text">FirebaseUI Auth</string>

    <string name="id_fmt">User ID: %s</string>
    <string name="email_fmt">Email: %s</string>
    <string name="completedMasechtaBut">completedMasButton</string>
    <string name="SignOutMenu">Sign Out</string>
    <string name="completed" />
    <string name="dateShloshimLabel">Shloshim Date</string>
    <string name="default_web_client_id">placeholder</string>
    <string name="title_activity_confirm_delete_masechta">ConfirmDeleteMasechta</string>
    <string name="time_remaining_ended">"Time Remaining: Ended "</string>
    <string name="save_to_calendar">Save to calendar</string>
    <string name="name_of_father">Name of Father</string>
    <string name="father_name_hebrew">שם האב</string>
    <string name="ids_must_match">IDs must match</string>
</resources>
