<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/backgroundLayoutHome"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:background="@drawable/images">

    <EditText
        android:id="@+id/caseIdSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="52dp"
        android:drawableLeft="@drawable/ic_search_black_36dp"
        android:drawableStart="@drawable/ic_search_black_36dp"
        android:textSize="25sp"
        android:hint="@string/caseId"
        android:inputType="textPersonName"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/edittext_format"/>

    <Button
        android:id="@+id/newCase"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/new_case"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/currentMishnayosButton"
        android:layout_marginBottom="37dp"
        android:layout_above="@+id/viewAllAvailButton"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/searchCaseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/caseIdSearch"
        android:layout_centerHorizontal="true"
        android:text="@string/search" />

    <Button
        android:id="@+id/viewAllAvailButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="57dp"
        android:text="@string/viewAllAvail"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />
</RelativeLayout>
